# FabricEmergenceLab

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gpu_contributor.md
.github/workflows/: ci.yml
adapters/: __init__.py  environment_adapter.py  gridworld_adapter.py  physics_adapter.py  simworld_adapter.py
docs/: architecture.md  emergence_report.md  phase_8_vision.md  roadmap.md
experiments/: emergence_lab.py  evolution_loop.py  memory_maze.py  multi_agent_world.py  physics_emergence.py
fabricpc/examples/: PC_backprop_compare.py  custom_node.py  jpc_fc_resnet_compare.py  mnist_advanced.py  mnist_aim_tracking.py  mnist_cyclic_graph.py  mnist_demo.py  mnist_lateral_connections.py  mnist_multi_gpu.py  mupc_demo.py  resnet18_cifar10_demo.py  storkey_hopfield_demo.py  storkey_hopfield_diagnostic.py  storkey_hopfield_recall.py  transformer_demo.py  transformer_tuning.py  transformer_v2_demo.py
fabricpc/examples/plotting/: visualize_experiment.py
fabricpc/examples/scaling/: mlp_scaling.py  scaling_analysis_plots.py
fabricpc/fabricpc/: __init__.py
fabricpc/scripts/: diagnose_deep_mupc.py
fabricpc/tests/: conftest.py  test_auto_node_grad.py  test_energy.py  test_fabricpc.py  test_inference_order.py  test_initializers.py  test_multi_gpu.py  test_mupc.py  test_ndim_shapes.py  test_optimizers.py  test_rope.py  test_state_initializer.py  test_storkey_hopfield.py  test_train_backprop.py  test_transformer_mupc.py  test_transformer_nodes.py
fabricpc_extensions/: __init__.py  agent.py  ansi.py  communication.py  evolution.py  llm_interface.py  physics_environment.py  shared_memory.py  world_model.py
logs/: ANALYSIS_REPORT.md  analysis.py  analysis_report.py  emergence_agent_0.jsonl  emergence_agent_1.jsonl  emergence_events.jsonl  emergence_metrics.jsonl  emergence_pairwise.jsonl  memory_maze.jsonl  physics_agent_0.jsonl  physics_agent_1.jsonl  physics_metrics.jsonl
scripts/: generate_emergence_report.py  generate_report.py  llm_interpret.py  visualize.py
tests/: test_imports.py
(+43 files in other folders)
